--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -8,11 +8,13 @@
 <body>
     <h1>Dynamic Quote Generator</h1>
 
+    <!-- Quote display area -->
     <div id="quoteDisplay"></div>
 
+    <!-- Button to show a new quote -->
     <button id="newQuote">Show New Quote</button>
 
-    <!-- Add quote form -->
+    <!-- Form to add a new quote -->
     <div>
         <input id="newQuoteText" type="text" placeholder="Enter a new quote">
         <input id="newQuoteCategory" type="text" placeholder="Enter quote category">
