--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -9,10 +9,14 @@
   <h1>Dynamic Quote Generator</h1>
 
   <div id="quoteDisplay"></div>
+
+  <!-- Button to show new quote -->
   <button id="newQuote">Show New Quote</button>
 
-  <!-- container for dynamic form -->
-  <div id="formContainer"></div>
+  <!-- Inputs for new quote -->
+  <input id="newQuoteText" type="text" placeholder="Enter a new quote">
+  <input id="newQuoteCategory" type="text" placeholder="Enter quote category">
+  <button id="addQuoteBtn">Add Quote</button>
 
   <script src="script.js"></script>
 </body>
