--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -10,13 +10,10 @@
 
   <div id="quoteDisplay"></div>
 
-  <!-- Button to show new quote -->
   <button id="newQuote">Show New Quote</button>
 
-  <!-- Inputs for new quote -->
-  <input id="newQuoteText" type="text" placeholder="Enter a new quote">
-  <input id="newQuoteCategory" type="text" placeholder="Enter quote category">
-  <button id="addQuoteBtn">Add Quote</button>
+  <!-- Container for the Add Quote form -->
+  <div id="formContainer"></div>
 
   <script src="script.js"></script>
 </body>
