--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -3,16 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dynamic Quote Generator</title>
+  <title>Dynamic Quote Generator with Categories</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; }
     #quoteDisplay { margin: 20px 0; font-size: 1.2em; }
-    input { margin: 5px; padding: 5px; }
+    input, select { margin: 5px; padding: 5px; }
     button { margin: 5px; padding: 5px 10px; }
   </style>
 </head>
 <body>
   <h1>Dynamic Quote Generator</h1>
+
+  <!-- Category filter -->
+  <label for="categoryFilter">Filter by Category:</label>
+  <select id="categoryFilter" onchange="filterQuotes()">
+    <option value="all">All Categories</option>
+    <!-- Categories will be populated dynamically -->
+  </select>
 
   <!-- Display random quote -->
   <div id="quoteDisplay"></div>
@@ -27,7 +34,6 @@
     <button id="exportBtn">Export Quotes</button>
   </div>
 
-  <!-- Link to JavaScript -->
   <script src="script.js"></script>
 </body>
 </html>
