--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -3,37 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dynamic Quote Generator with Categories</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 20px; }
-    #quoteDisplay { margin: 20px 0; font-size: 1.2em; }
-    input, select { margin: 5px; padding: 5px; }
-    button { margin: 5px; padding: 5px 10px; }
-  </style>
+  <title>Dynamic Quote Generator with Filter</title>
 </head>
 <body>
   <h1>Dynamic Quote Generator</h1>
 
-  <!-- Category filter -->
-  <label for="categoryFilter">Filter by Category:</label>
-  <select id="categoryFilter" onchange="filterQuotes()">
-    <option value="all">All Categories</option>
-    <!-- Categories will be populated dynamically -->
-  </select>
-
-  <!-- Display random quote -->
+  <!-- Display area for quotes -->
   <div id="quoteDisplay"></div>
+
+  <!-- Button to show a random quote -->
   <button id="newQuote">Show New Quote</button>
 
-  <!-- Form container for adding new quotes dynamically -->
+  <!-- Category filter dropdown -->
+  <div>
+    <label for="categoryFilter">Filter by Category:</label>
+    <select id="categoryFilter">
+      <option value="all">All Categories</option>
+      <!-- Options populated dynamically -->
+    </select>
+  </div>
+
+  <!-- Container for adding new quotes -->
   <div id="formContainer"></div>
 
-  <!-- Import/Export JSON -->
+  <!-- Import and export JSON buttons -->
   <div>
     <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
     <button id="exportBtn">Export Quotes</button>
   </div>
 
+  <!-- Link to the JavaScript file -->
   <script src="script.js"></script>
 </body>
 </html>
