--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -3,28 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dynamic Quote Generator</title>
+  <title>Dynamic Quote Generator with Sync</title>
 </head>
 <body>
-  <h1>Dynamic Quote Generator</h1>
+  <h1>Dynamic Quote Generator (with Server Sync)</h1>
 
-  <!-- Category filter dropdown -->
-  <label for="categoryFilter">Filter by Category: </label>
-  <select id="categoryFilter">
-    <option value="all">All Categories</option>
-    <!-- categories will be added dynamically -->
-  </select>
-
-  <!-- Quote display -->
   <div id="quoteDisplay"></div>
-
-  <!-- Show new quote button -->
   <button id="newQuote">Show New Quote</button>
 
-  <!-- Form container for adding new quotes -->
   <div id="formContainer"></div>
 
-  <!-- Link to JavaScript file -->
   <script src="script.js"></script>
 </body>
 </html>
