--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -3,16 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dynamic Quote Generator with Sync</title>
+  <title>Dynamic Quote Generator</title>
 </head>
 <body>
-  <h1>Dynamic Quote Generator (with Server Sync)</h1>
+  <h1>Dynamic Quote Generator</h1>
 
+  <!-- Notification area -->
+  <div id="notification" style="color: red; font-weight: bold;"></div>
+
+  <!-- Category filter dropdown -->
+  <label for="categoryFilter">Filter by Category: </label>
+  <select id="categoryFilter">
+    <option value="all">All Categories</option>
+  </select>
+
+  <!-- Quote display -->
   <div id="quoteDisplay"></div>
-  <button id="newQuote">Show New Quote</button>
 
+  <!-- Buttons -->
+  <button id="newQuote">Show New Quote</button>
+  <button id="syncNow">Sync Now</button> <!-- NEW -->
+
+  <!-- Form container -->
   <div id="formContainer"></div>
 
+  <!-- Script -->
   <script src="script.js"></script>
 </body>
 </html>
