editing again to fix conflict

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -23,6 +23,11 @@
   <!-- Buttons -->
   <button id="newQuote">Show New Quote</button>
   <button id="syncNow">Sync Now</button> <!-- NEW -->
+  <div id="notification" style="color: red; font-weight: bold;"></div>
+<div id="logContainer" style="margin-top: 10px; border: 1px solid #ccc; padding: 5px; max-height: 150px; overflow-y: auto;">
+  <strong>Sync Log:</strong>
+</div>
+
 
   <!-- Form container -->
   <div id="formContainer"></div>
