--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -7,17 +7,24 @@
 </head>
 <body>
   <h1>Dynamic Quote Generator</h1>
+
   <div id="quoteDisplay"></div>
-  <button id="newQuote">Show New Quote</button>
-  <div>
-    <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
-    <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
-    <button onclick="addQuote()">Add Quote</button>
-  </div>
-  <select id="categoryFilter">
+
+  <label for="categoryFilter">Filter by Category:</label>
+  <select id="categoryFilter" onchange="filterQuotes()">
     <option value="all">All Categories</option>
   </select>
-  <div id="notification" style="color: red; margin-top: 10px;"></div>
+
+  <div>
+    <input type="text" id="newQuoteText" placeholder="Enter new quote" />
+    <input type="text" id="newQuoteCategory" placeholder="Enter category" />
+    <button onclick="addQuote()">Add Quote</button>
+  </div>
+
+  <button id="newQuote">Show New Quote</button>
+
+  <div id="notification" style="color: green; margin-top: 10px;"></div>
+
   <script src="script.js"></script>
 </body>
 </html>
