--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -4,35 +4,48 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dynamic Quote Generator</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 20px; }
+    #quoteDisplay { font-size: 1.2em; margin: 20px 0; }
+    #controls button, #controls input, #controls select { margin: 5px; padding: 5px 10px; }
+    #notification { display: none; position: fixed; bottom: 10px; right: 10px; background: #333; color: #fff; padding: 10px; border-radius: 5px; }
+  </style>
 </head>
 <body>
   <h1>Dynamic Quote Generator</h1>
-
-  <div id="notification"></div>
-
-  <div>
-    <select id="categoryFilter" onchange="filterQuotes()">
+  
+  <div id="quoteDisplay">Loading quote...</div>
+  
+  <div id="controls">
+    <button id="newQuote">Show New Quote</button>
+    <select id="categoryFilter">
       <option value="all">All Categories</option>
     </select>
+    
+    <input type="text" id="newQuoteText" placeholder="New quote text">
+    <input type="text" id="newQuoteCategory" placeholder="Category">
+    <button id="addQuoteBtn">Add Quote</button>
+    
+    <button id="exportBtn">Export Quotes</button>
+    <input type="file" id="importFile" accept=".json">
   </div>
-
-  <div id="quoteDisplay"></div>
-
-  <div>
-    <button id="newQuote">Show New Quote</button>
-  </div>
-
-  <div>
-    <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
-    <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
-    <button onclick="addQuote()">Add Quote</button>
-  </div>
-
-  <div>
-    <button onclick="exportToJsonFile()">Export Quotes</button>
-    <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
-  </div>
+  
+  <div id="notification"></div>
 
   <script src="script.js"></script>
+  <script>
+    // Add new quote event
+    document.getElementById("addQuoteBtn").addEventListener("click", () => {
+      const text = document.getElementById("newQuoteText").value.trim();
+      const category = document.getElementById("newQuoteCategory").value.trim();
+      if (!text || !category) {
+        alert("Please enter both quote and category!");
+        return;
+      }
+      addQuote(text, category);
+      document.getElementById("newQuoteText").value = "";
+      document.getElementById("newQuoteCategory").value = "";
+    });
+  </script>
 </body>
 </html>
