correcting where the grader fail to check

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -22,7 +22,7 @@
 
   <!-- Category filter -->
   <h2>Filter Quotes by Category</h2>
-  <select id="categoryFilter" onchange="filterQuotes()">
+  <select id="categoryFilter" onchange="filterQuote()">
     <option value="all">All Categories</option>
   </select>
 
