Check for logic to add a new quote to the quotes array and update the DOM

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Universal Dynamic Quote Generator</title>
+  <title>Dynamic Quote Generator</title>
 </head>
 <body>
-  <h1>Universal Dynamic Quote Generator</h1>
+  <h1>Dynamic Quote Generator</h1>
 
   <!-- Display random quote -->
   <div id="quoteDisplay" style="margin-bottom: 20px; font-weight: bold;"></div>
